--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/skypro_bulletin_board
-spring.datasource.username=db_user
-spring.datasource.password=db_password
+spring.datasource.url=jdbc:postgresql://localhost:5432/skypro
+spring.datasource.username=postgres
+spring.datasource.password=5833118
 
 spring.liquibase.change-log=classpath:liquibase/changelog.yml
 
